Added GH Button

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
           <li>White background on module</li>
           <li>Issue: hover doesn't disappear when dragging.</li>
         </ul>
+        <a href="https://github.com/Mxs2019/sortable-list" class="btn btn-lg btn-block btn-primary">View on GitHub</a>
 
       </div>
     </div>
