--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="left-side"><i class="fa fa-bars"></i></div>
               <div class="clickable d-flex justify-content-between align-items-center">
                 <div>Call to Action</div>
-                <div><i class="fa fa-pencil"></i></div>
+                <div><i class="fa fa-chevron-right"></i></div>
               </div>
             </div>
           </div>
@@ -80,28 +80,28 @@
             <div class="left-side"><i class="fa fa-bars"></i></div>
             <div class="clickable d-flex justify-content-between align-items-center">
               <div>Text Block</div>
-              <div><i class="fa fa-pencil"></i></div>
+              <div><i class="fa fa-chevron-right"></i></div>
             </div>
           </div>
           <div class="module d-flex align-items-center">
             <div class="left-side"><i class="fa fa-bars"></i></div>
             <div class="clickable d-flex justify-content-between align-items-center">
               <div>Announcement</div>
-              <div><i class="fa fa-pencil"></i></div>
+              <div><i class="fa fa-chevron-right"></i></div>
             </div>
           </div>
           <div class="module d-flex align-items-center">
             <div class="left-side"><i class="fa fa-bars"></i></div>
             <div class="clickable d-flex justify-content-between align-items-center">
               <div>Event Details</div>
-              <div><i class="fa fa-pencil"></i></div>
+              <div><i class="fa fa-chevron-right"></i></div>
             </div>
           </div>
           <div class="module d-flex align-items-center">
             <div class="left-side"><i class="fa fa-bars"></i></div>
             <div class="clickable d-flex justify-content-between align-items-center">
               <div>Event Cover</div>
-              <div><i class="fa fa-pencil"></i></div>
+              <div><i class="fa fa-chevron-right"></i></div>
             </div>
           </div>
         </div>
