--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       cursor: all-scroll;
     }
 
-    .fa-pencil {
-      float: right;
+    .fa-chevron-right {
+      color: #BBB;
     }
 
     .left-side {
