--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     .module-list {
-      width: 350px;
+      width: 100%;
 
       border-top: 1px solid lightgrey;
       border-left: 1px solid lightgrey;
