Only show move on hover

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     .module-top {
-      padding: 20px;
+      padding: 20px 20px 10px 27px;
     }
 
     .module-list {
@@ -47,9 +47,13 @@
     }
 
     .fa-bars {
-      margin-right: 10px;
       color: #AAA;
       cursor: all-scroll;
+      display: none;
+    }
+
+    .module:hover .fa-bars {
+      display: block;
     }
 
     .fa-chevron-right {
@@ -57,7 +61,8 @@
     }
 
     .left-side {
-      padding: 15px 0px 15px 20px;
+      padding: 15px 0px 15px 6px;
+      width: 27px;
     }
 
     .clickable {
