Small Bug FIxes

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
       padding: 10px 20px;
       border-bottom: 1px solid lightgrey;
       max-height: 46px;
-      transition: 0.4s;
+      transition: 0.2s;
+      overflow: hidden;
     }
 
     .parameter:first-of-type {
@@ -145,14 +146,25 @@
       opacity: 0;
       transition: 0.3s;
       color: grey;
+      /* display: none; */
     }
 
     .parameter.expanded .detail {
       opacity: 1;
+      display: block;
     }
 
     .param-top {
       padding: 20px;
+    }
+
+    .rules {
+      width: 500px;
+      right: 0;
+      position: fixed;
+      padding: 30px;
+      border-left: 1px solid lightgrey;
+      border-bottom: 1px solid lightgrey;
     }
   </style>
 </head>
@@ -280,31 +292,20 @@
       </div>
     </div>
   </div>
-  <div class="container">
-
-    <div class="row">
-
-      <div class="col-md-4">
-
-      </div>
-      <div class="col-md-1"></div>
-      <div class="col-md-6">
-        <h3>Rules</h3>
-        <ul>
-          <li>This is just an animation demo - not a pixel perfect mock. Use the mocks as the source of truth.</li>
-          <li>Whole block is draggable. A 3px fallback tolerance is used to distinguish between clicks and drags</li>
-          <li>If you click the hamburger, it doens't do anything.</li>
-          <li>The entire right side is a click target (from just past the hamburger).</li>
-          <li>The cell where it will be dropped (ghostClass in sortable) is greyed out</li>
-          <li>Slight animation when rows move around (100ms)</li>
-          <li>White background on module</li>
-          <li>ISSUE: hover doesn't disappear when dragging.</li>
-          <li>ISSUE: If you start dragging an element and drag it to the right it scrolls to the right and the right slides in.</li>
-        </ul>
-        <a href="https://github.com/Mxs2019/sortable-list" class="btn btn-lg btn-block btn-primary">View on GitHub</a>
-
-      </div>
-    </div>
+  <div class="rules">
+    <h3>Rules</h3>
+    <ul>
+      <li>This is just an animation demo - not a pixel perfect mock. Use the mocks as the source of truth.</li>
+      <li>Whole block is draggable. A 3px fallback tolerance is used to distinguish between clicks and drags</li>
+      <li>If you click the hamburger, it doens't do anything.</li>
+      <li>The entire right side is a click target (from just past the hamburger).</li>
+      <li>The cell where it will be dropped (ghostClass in sortable) is greyed out</li>
+      <li>Slight animation when rows move around (100ms)</li>
+      <li>White background on module</li>
+      <li>ISSUE: hover doesn't disappear when dragging.</li>
+      <li>ISSUE: If you start dragging an element and drag it to the right it scrolls to the right and the right slides in.</li>
+    </ul>
+    <a href="https://github.com/Mxs2019/sortable-list" class="btn btn-lg btn-block btn-primary">View on GitHub</a>
   </div>
 
 
