--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
       align-items: center;
       justify-content: space-around;
       opacity: 0.0;
+      color: #666;
     }
 
     .module:hover .icon {
