--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     .module {
       /* padding: 15px 20px; */
-      cursor: pointer;
+      /* cursor: pointer; */
       border-bottom: 1px solid lightgrey;
       background-color: white;
     }
@@ -50,6 +50,8 @@
 
     .module-text {
       padding: 8px 0px;
+      cursor: pointer;
+      flex-grow: 1;
     }
 
 
@@ -179,6 +181,11 @@
       border-bottom: 1px solid lightgrey;
     }
 
+    .icons {
+      display: flex;
+      align-items: center;
+    }
+
     .icon {
       padding: 5px;
       width: 35px;
@@ -189,6 +196,7 @@
       justify-content: space-around;
       opacity: 0.0;
       color: #666;
+      cursor: pointer;
     }
 
     .module:hover .icon {
@@ -204,13 +212,13 @@
 
 <body ng-app="app" ng-controller="Controller as ctr" ng-cloak>
   <div class="left-column">
-    <div class="param-col" ng-class="{'slide-in': showingParams}">
+    <div class="param-col" ng-class="{'slide-in': selectedModule}">
       <div class="param-top">
         <div class="mb-2">
-          <a href="" ng-click="updateShowingParams(false)" class="slide-out-params">
+          <a href="" ng-click="updateSelectedModule()" class="slide-out-params">
           <i class="fa fa-chevron-left "></i> Back to Design</a>
         </div>
-        <h5>Parameters</h5>
+        <h5>{{ selectedModule }}</h5>
       </div>
       <div class="params">
         <div class="parameter" ng-repeat="param in params track by $index" ng-click="showParam($index)" ng-class="{'expanded': paramShowing == $index}">
@@ -234,16 +242,17 @@
 
     <div class="module-list" id="items">
 
-      <div class="module" ng-repeat="module in modules">
+      <div class="module" ng-repeat="module in modules track by $index">
         <div class="module-inner d-flex align-items-center">
           <div class="left-side"><i class="fa fa-bars"></i></div>
-          <div class="clickable d-flex justify-content-between align-items-center" ng-click="updateShowingParams(true)">
-            <div class="module-text">{{ module }}</div>
-            <div class="d-flex">
-              <div class="icon" data-toggle="tooltip" data-placement="bottom" title="Delete Module"><i class="fa fa-trash"></i></div>
-              <div class="icon" data-toggle="tooltip" data-placement="bottom" title="Add Module Below"><i class="fa fa-arrow-down"></i></div>
-              <div class="icon" data-toggle="tooltip" data-placement="bottom" title="Add Module Above"><i class="fa fa-arrow-up"></i></div>
-              <!-- <div class="icon ml-2"><i class="fa fa-chevron-right"></i></div> -->
+          <div class="clickable d-flex justify-content-between align-items-center">
+            <div class="module-text" ng-click="updateSelectedModule(module)">{{ module }}</div>
+            <div class="d-flex icons">
+              <div class="icon" data-toggle="tooltip" data-placement="bottom" title="Edit Module" ng-click="updateSelectedModule(module)"><i class="fa fa-pencil-alt"></i></div>
+              <div class="icon" data-toggle="tooltip" data-placement="bottom" title="Delete Module" ng-click="deleteModule($index)"><i class="fa fa-trash"></i></div>
+              <div class="icon" data-toggle="tooltip" data-placement="bottom" title="Add Module Below" ng-click="addModule($index, false)"><i class="fa fa-arrow-down"></i></div>
+              <div class="icon" data-toggle="tooltip" data-placement="bottom" title="Add Module Above" ng-click="addModule($index, true)"><i class="fa fa-arrow-up"></i></div>
+              <!-- <div><i class="fa fa-chevron-right ml-2"></i></div> -->
             </div>
           </div>
         </div>
